# mgmigrate

./: .arcconfig  .clang-format  .gitignore  CMakeLists.txt  README.md  build-libpq.py  mysqlconnector.patch
.github/workflows/: ci.yml
cmake/: FindGSS.cmake
docs/: imdb.cpp  imdb_schema.sql  mysql_schema.sql  tutorial.md
mg_migrate/: .gitignore  CMakeLists.txt
mg_migrate/src/: CMakeLists.txt  main.cpp  memgraph_client.hpp  memgraph_destination.cpp  memgraph_destination.hpp  memgraph_source.cpp  memgraph_source.hpp  postgresql.cpp  postgresql.hpp  postgresql_client.cpp  postgresql_client.hpp
mg_migrate/src/mgclient/: CMakeLists.txt  client.cpp  client.hpp  value.cpp  value.hpp
mg_migrate/src/mgclient/v2/: value.cpp  value.hpp
mg_migrate/src/source/: memgraph.cpp  memgraph_source.cpp  mysql.cpp  mysql.hpp  postgresql.cpp  postgresql.hpp  schema_info.cpp  schema_info.hpp
mg_migrate/src/utils/: algorithm.hpp
mg_migrate/tests/: CMakeLists.txt  memgraph_destination.cpp  mgclient_value.cpp  value_v2.cpp
mg_streams/: README.md
src/: CMakeLists.txt  main.cpp  memgraph_client.hpp  memgraph_destination.cpp
src/mgclient/: CMakeLists.txt  value.hpp
src/source/: memgraph.cpp  mysql.cpp  mysql.hpp  postgresql.cpp  postgresql.hpp
src/utils/: algorithm.hpp
tests/: CMakeLists.txt  mgclient_value.cpp
tests/e2e/: memgraph.py  memgraph_e2e.py  mysql_e2e.py  postgresql.py  postgresql_e2e.py
